@@ -70,8 +70,7 @@ public class RegenerateCodeAction extends GradleAction {
 				List<GeneratorTemplate> templates = mcreator.getGenerator().getModElementGeneratorTemplatesList(mod);
 				if (templates == null)
 					continue;
-				List<File> modElementFiles = templates.stream().map(GeneratorTemplate::getFile)
-						.collect(Collectors.toList());
+				List<File> modElementFiles = templates.stream().map(GeneratorTemplate::getFile).toList();
 				toBePreserved.addAll(modElementFiles); // we don't delete mod element files in next step
 				if (!mod.isCodeLocked()) // but we do in this step, if the code is not locked
 					modElementFiles.forEach(File::delete);
@@ -84,8 +83,8 @@ public class RegenerateCodeAction extends GradleAction {
 							&& ((Map<?, ?>) generatorTemplate.getTemplateData()).get("canLock")
 							.equals("true")) // can this file be locked
 						// are mod base file locked
-						toBePreserved.add(generatorTemplate
-								.getFile()); // we add locked base mod files on the to be preserved list
+						toBePreserved.add(
+								generatorTemplate.getFile()); // we add locked base mod files on the to be preserved list
 				});
 			}
 
@@ -161,8 +160,8 @@ public class RegenerateCodeAction extends GradleAction {
 							.generateElement(generatableElement, false);
 
 					if (!mod.isCodeLocked()) {
-						filesToReformat.addAll(generatedFiles.stream().map(GeneratorFile::getFile)
-								.collect(Collectors.toSet()));
+						filesToReformat.addAll(
+								generatedFiles.stream().map(GeneratorFile::file).collect(Collectors.toSet()));
 					}
 
 					// save custom mod element picture if it has one
